[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/gplanner/Widgets/PerItemColorPopupMenu/PerItemColorPopupMenu.gd" type="Script" id=1]
[ext_resource path="res://addons/gplanner/Widgets/PerItemColorPopupMenu/PerItemColorMenuButton.gd" type="Script" id=2]

[node name="PerItemColorMenuButton" type="Button"]
margin_right = 12.0
margin_bottom = 20.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerItemColorPopupMenu" type="PopupPanel" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuItems" type="VBoxContainer" parent="PerItemColorPopupMenu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="about_to_show" from="PerItemColorPopupMenu" to="PerItemColorPopupMenu" method="_on_about_to_show"]
[connection signal="index_pressed" from="PerItemColorPopupMenu" to="." method="_on_PerItemColorPopupMenu_index_pressed"]
[connection signal="mouse_entered" from="PerItemColorPopupMenu" to="." method="_on_PerItemColorPopupMenu_mouse_entered"]
[connection signal="mouse_exited" from="PerItemColorPopupMenu" to="PerItemColorPopupMenu" method="_on_PerItemColorPopupMenu_mouse_exited"]
